feat(api): add get user api and add signal handling for graceful shutdown server
