# apps/api/models/user.go
@@ -2,6 +2,7 @@ package models
 
 import (
 	"context"
+	"time"
 
 	"github.com/tsungyu927/bill-breaker/api/db"
 )
@@ -11,8 +12,8 @@ type User struct {
 	DeviceId string `json:"device_id"`
 	Name string `json:"name"`
 	Email string `json:"email,omitempty"`
-	CreatedAt string `json:"created_at"`
-	LastModifiedAt string `json:"last_modified_at"`
+	CreatedAt time.Time `json:"created_at"`
+	LastModifiedAt time.Time `json:"last_modified_at"`
 }
 
 func (user *User) Create() error {
@@ -21,7 +22,9 @@ func (user *User) Create() error {
 	return db.GetDB().QueryRow(context.Background(), query, user.DeviceId, user.Name, user.Email).Scan(&user.ID)
 }
 
-func (user *User) Get() {
-	// TODO: Get specific user from DB
+func (user *User) Get(userID string) error {
+	query := `SELECT * FROM users WHERE id = $1`
+
+	return db.GetDB().QueryRow(context.Background(), query, userID).Scan(&user.ID, &user.DeviceId, &user.Name, &user.Email, &user.CreatedAt, &user.LastModifiedAt)
 }
 
